--- a/VirtualTourist/Storyboard/Base.lproj/Main.storyboard
+++ b/VirtualTourist/Storyboard/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="3W0-gX-Bpf">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="3W0-gX-Bpf">
     <device id="retina4_0" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15510"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -51,19 +51,34 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="brb-Xy-19U">
-                            <size key="itemSize" width="50" height="50"/>
+                            <size key="itemSize" width="123" height="122"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="jlK-Pb-sZq">
-                                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Cell" id="jlK-Pb-sZq" customClass="Cell" customModule="VirtualTourist" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="0.0" width="123" height="122"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="vs8-qY-SFS">
-                                    <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="123" height="122"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="XPE-Qe-ISa">
+                                            <rect key="frame" x="0.0" y="0.0" width="123" height="122"/>
+                                        </imageView>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="bottom" secondItem="XPE-Qe-ISa" secondAttribute="bottom" id="9qD-oO-gcH"/>
+                                        <constraint firstItem="XPE-Qe-ISa" firstAttribute="leading" secondItem="vs8-qY-SFS" secondAttribute="leading" id="eLi-k5-wwH"/>
+                                        <constraint firstAttribute="trailing" secondItem="XPE-Qe-ISa" secondAttribute="trailing" id="k64-HL-ePt"/>
+                                        <constraint firstItem="XPE-Qe-ISa" firstAttribute="top" secondItem="vs8-qY-SFS" secondAttribute="top" id="oUg-7h-Roc"/>
+                                    </constraints>
                                 </collectionViewCellContentView>
+                                <size key="customSize" width="123" height="122"/>
+                                <connections>
+                                    <outlet property="imageView" destination="XPE-Qe-ISa" id="WPg-UO-rSc"/>
+                                </connections>
                             </collectionViewCell>
                         </cells>
                         <connections>
@@ -71,6 +86,9 @@
                             <outlet property="delegate" destination="fcp-6a-Zep" id="WhN-N2-94V"/>
                         </connections>
                     </collectionView>
+                    <connections>
+                        <outlet property="collectionAlbumeView" destination="GsM-Uw-SgR" id="F1X-CK-94x"/>
+                    </connections>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="H50-uX-DxT" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
