--- a/VirtualTourist/Storyboard/Base.lproj/Main.storyboard
+++ b/VirtualTourist/Storyboard/Base.lproj/Main.storyboard
@@ -11,7 +11,7 @@
         <!--Travel Locations Map View-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController storyboardIdentifier="TravelLocationsMapView" useStoryboardIdentifierAsRestorationIdentifier="YES" id="BYZ-38-t0r" customClass="TravelLocationsMapView" customModule="VirtualTourist" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="TravelLocationsMapView" modalPresentationStyle="fullScreen" useStoryboardIdentifierAsRestorationIdentifier="YES" id="BYZ-38-t0r" customClass="TravelLocationsMapView" customModule="VirtualTourist" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -35,7 +35,7 @@
                     <navigationItem key="navigationItem" id="Ojs-YK-OBk"/>
                     <connections>
                         <outlet property="mapView" destination="68U-BC-rQL" id="Spz-vL-ORB"/>
-                        <segue destination="fcp-6a-Zep" kind="presentation" identifier="modalSegue" id="R6R-kM-rpf"/>
+                        <segue destination="jtZ-zc-dlk" kind="presentation" id="NUj-hb-Ynq"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -43,56 +43,57 @@
             <point key="canvasLocation" x="2133.75" y="138.38028169014083"/>
         </scene>
         <!--Photo Album View Controller-->
-        <scene sceneID="jHc-is-JrT">
+        <scene sceneID="84g-c3-SpX">
             <objects>
-                <collectionViewController modalPresentationStyle="fullScreen" id="fcp-6a-Zep" customClass="PhotoAlbumViewController" customModule="VirtualTourist" customModuleProvider="target" sceneMemberID="viewController">
-                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="GsM-Uw-SgR">
+                <viewController storyboardIdentifier="PhotoAlbumViewController" modalPresentationStyle="fullScreen" useStoryboardIdentifierAsRestorationIdentifier="YES" id="jtZ-zc-dlk" customClass="PhotoAlbumViewController" customModule="VirtualTourist" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="GJA-3t-wSF">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="glY-sR-NFh">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="128"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="6gy-2z-Ido"/>
+                                </constraints>
+                            </mapView>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Nmg-lJ-maE">
+                                <rect key="frame" x="0.0" y="127" width="320" height="441"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="QfB-cr-ouY">
+                                    <size key="itemSize" width="50" height="50"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="ElE-Ps-WlJ">
+                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="brT-A2-HIH">
+                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </collectionViewCellContentView>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="brb-Xy-19U">
-                            <size key="itemSize" width="123" height="122"/>
-                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                        </collectionViewFlowLayout>
-                        <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Cell" id="jlK-Pb-sZq" customClass="Cell" customModule="VirtualTourist" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="0.0" width="123" height="122"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="vs8-qY-SFS">
-                                    <rect key="frame" x="0.0" y="0.0" width="123" height="122"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                    <subviews>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="XPE-Qe-ISa">
-                                            <rect key="frame" x="0.0" y="0.0" width="123" height="122"/>
-                                        </imageView>
-                                    </subviews>
-                                    <constraints>
-                                        <constraint firstAttribute="bottom" secondItem="XPE-Qe-ISa" secondAttribute="bottom" id="9qD-oO-gcH"/>
-                                        <constraint firstItem="XPE-Qe-ISa" firstAttribute="leading" secondItem="vs8-qY-SFS" secondAttribute="leading" id="eLi-k5-wwH"/>
-                                        <constraint firstAttribute="trailing" secondItem="XPE-Qe-ISa" secondAttribute="trailing" id="k64-HL-ePt"/>
-                                        <constraint firstItem="XPE-Qe-ISa" firstAttribute="top" secondItem="vs8-qY-SFS" secondAttribute="top" id="oUg-7h-Roc"/>
-                                    </constraints>
-                                </collectionViewCellContentView>
-                                <size key="customSize" width="123" height="122"/>
-                                <connections>
-                                    <outlet property="imageView" destination="XPE-Qe-ISa" id="WPg-UO-rSc"/>
-                                </connections>
-                            </collectionViewCell>
-                        </cells>
-                        <connections>
-                            <outlet property="dataSource" destination="fcp-6a-Zep" id="rfL-kc-UxH"/>
-                            <outlet property="delegate" destination="fcp-6a-Zep" id="WhN-N2-94V"/>
-                        </connections>
-                    </collectionView>
-                    <connections>
-                        <outlet property="collectionAlbumeView" destination="GsM-Uw-SgR" id="F1X-CK-94x"/>
-                    </connections>
-                </collectionViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="H50-uX-DxT" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                        <constraints>
+                            <constraint firstItem="Nmg-lJ-maE" firstAttribute="trailing" secondItem="v0I-Ue-aXH" secondAttribute="trailing" id="4jG-V7-2j8"/>
+                            <constraint firstItem="Nmg-lJ-maE" firstAttribute="leading" secondItem="v0I-Ue-aXH" secondAttribute="leading" id="7ac-VQ-1nU"/>
+                            <constraint firstItem="glY-sR-NFh" firstAttribute="top" secondItem="v0I-Ue-aXH" secondAttribute="top" id="7bn-VN-VxJ"/>
+                            <constraint firstItem="glY-sR-NFh" firstAttribute="leading" secondItem="v0I-Ue-aXH" secondAttribute="leading" id="WLT-LT-k2h"/>
+                            <constraint firstItem="Nmg-lJ-maE" firstAttribute="bottom" secondItem="v0I-Ue-aXH" secondAttribute="bottom" id="Ycf-s0-Edd"/>
+                            <constraint firstItem="glY-sR-NFh" firstAttribute="centerX" secondItem="GJA-3t-wSF" secondAttribute="centerX" id="eeD-XQ-rnk"/>
+                            <constraint firstItem="Nmg-lJ-maE" firstAttribute="top" secondItem="glY-sR-NFh" secondAttribute="top" constant="127" id="mlw-Ag-Y4b"/>
+                            <constraint firstItem="glY-sR-NFh" firstAttribute="trailing" secondItem="v0I-Ue-aXH" secondAttribute="trailing" id="rL3-YP-9hD"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="v0I-Ue-aXH"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hoM-3i-Nsh" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3285" y="137.32394366197184"/>
+            <point key="canvasLocation" x="3425.625" y="129.92957746478874"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="R1L-Nx-W1v">
