--- a/VirtualTourist/Storyboard/Base.lproj/Main.storyboard
+++ b/VirtualTourist/Storyboard/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="3W0-gX-Bpf">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="3W0-gX-Bpf">
     <device id="retina4_0" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -56,14 +56,14 @@
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Nmg-lJ-maE">
                                 <rect key="frame" x="0.0" y="127" width="320" height="441"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="QfB-cr-ouY">
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="QfB-cr-ouY">
                                     <size key="itemSize" width="142" height="82"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Cell" id="ElE-Ps-WlJ" customClass="Cell" customModule="VirtualTourist" customModuleProvider="target">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFit" reuseIdentifier="Cell" id="ElE-Ps-WlJ" customClass="Cell" customModule="VirtualTourist" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="142" height="82"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="brT-A2-HIH">
@@ -71,14 +71,14 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="xB0-2O-vml">
-                                                    <rect key="frame" x="20" y="20" width="102" height="62"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="142" height="82"/>
                                                 </imageView>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="xB0-2O-vml" firstAttribute="top" secondItem="brT-A2-HIH" secondAttribute="top" constant="20" symbolic="YES" id="6Pw-j0-sIz"/>
-                                                <constraint firstItem="xB0-2O-vml" firstAttribute="leading" secondItem="brT-A2-HIH" secondAttribute="leading" constant="20" symbolic="YES" id="PXR-lz-W7q"/>
+                                                <constraint firstItem="xB0-2O-vml" firstAttribute="top" secondItem="brT-A2-HIH" secondAttribute="top" id="6Pw-j0-sIz"/>
+                                                <constraint firstItem="xB0-2O-vml" firstAttribute="leading" secondItem="brT-A2-HIH" secondAttribute="leading" id="PXR-lz-W7q"/>
                                                 <constraint firstAttribute="bottom" secondItem="xB0-2O-vml" secondAttribute="bottom" id="Y9O-tl-ZZ5"/>
-                                                <constraint firstAttribute="trailing" secondItem="xB0-2O-vml" secondAttribute="trailing" constant="20" symbolic="YES" id="uQL-H2-4NW"/>
+                                                <constraint firstAttribute="trailing" secondItem="xB0-2O-vml" secondAttribute="trailing" id="uQL-H2-4NW"/>
                                             </constraints>
                                         </collectionViewCellContentView>
                                         <size key="customSize" width="142" height="82"/>
