--- a/VirtualTourist/Storyboard/Base.lproj/Main.storyboard
+++ b/VirtualTourist/Storyboard/Base.lproj/Main.storyboard
@@ -53,23 +53,8 @@
                                     <constraint firstAttribute="height" constant="128" id="6gy-2z-Ido"/>
                                 </constraints>
                             </mapView>
-                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JSX-JY-ohz">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="44" id="Jnd-pQ-QTI"/>
-                                </constraints>
-                                <items>
-                                    <navigationItem id="RRA-aq-g89">
-                                        <barButtonItem key="leftBarButtonItem" title="Back" id="KYT-Py-ZdS">
-                                            <connections>
-                                                <action selector="backButtonPressed:" destination="jtZ-zc-dlk" id="P9j-6C-q9g"/>
-                                            </connections>
-                                        </barButtonItem>
-                                    </navigationItem>
-                                </items>
-                            </navigationBar>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Nmg-lJ-maE">
-                                <rect key="frame" x="0.0" y="172" width="320" height="396"/>
+                                <rect key="frame" x="0.0" y="172" width="320" height="352"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="QfB-cr-ouY">
                                     <size key="itemSize" width="142" height="82"/>
@@ -107,6 +92,29 @@
                                     <outlet property="delegate" destination="jtZ-zc-dlk" id="0BE-T0-6R2"/>
                                 </connections>
                             </collectionView>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JSX-JY-ohz">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="Jnd-pQ-QTI"/>
+                                </constraints>
+                                <items>
+                                    <navigationItem id="RRA-aq-g89">
+                                        <barButtonItem key="leftBarButtonItem" title="Back" id="KYT-Py-ZdS">
+                                            <connections>
+                                                <action selector="backButtonPressed:" destination="jtZ-zc-dlk" id="P9j-6C-q9g"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EBb-2A-loe">
+                                <rect key="frame" x="0.0" y="524" width="320" height="44"/>
+                                <color key="backgroundColor" red="0.97254901960784312" green="0.97254901960784312" blue="0.97254901960784312" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="kLo-hF-wTa"/>
+                                </constraints>
+                                <state key="normal" title="New Collection"/>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
@@ -114,13 +122,16 @@
                             <constraint firstItem="JSX-JY-ohz" firstAttribute="leading" secondItem="v0I-Ue-aXH" secondAttribute="leading" id="6CD-8e-gOL"/>
                             <constraint firstItem="Nmg-lJ-maE" firstAttribute="leading" secondItem="v0I-Ue-aXH" secondAttribute="leading" id="7ac-VQ-1nU"/>
                             <constraint firstItem="glY-sR-NFh" firstAttribute="top" secondItem="v0I-Ue-aXH" secondAttribute="top" constant="44" id="7bn-VN-VxJ"/>
+                            <constraint firstItem="EBb-2A-loe" firstAttribute="bottom" secondItem="v0I-Ue-aXH" secondAttribute="bottom" id="9qm-sx-3u0"/>
                             <constraint firstItem="JSX-JY-ohz" firstAttribute="top" secondItem="v0I-Ue-aXH" secondAttribute="top" id="ETj-Et-1J3"/>
                             <constraint firstItem="glY-sR-NFh" firstAttribute="leading" secondItem="v0I-Ue-aXH" secondAttribute="leading" id="WLT-LT-k2h"/>
-                            <constraint firstItem="Nmg-lJ-maE" firstAttribute="bottom" secondItem="v0I-Ue-aXH" secondAttribute="bottom" id="Ycf-s0-Edd"/>
+                            <constraint firstItem="EBb-2A-loe" firstAttribute="top" secondItem="Nmg-lJ-maE" secondAttribute="bottom" id="dsa-xK-uLS"/>
                             <constraint firstItem="glY-sR-NFh" firstAttribute="centerX" secondItem="GJA-3t-wSF" secondAttribute="centerX" id="eeD-XQ-rnk"/>
+                            <constraint firstItem="EBb-2A-loe" firstAttribute="trailing" secondItem="v0I-Ue-aXH" secondAttribute="trailing" id="f79-J6-r6C"/>
                             <constraint firstItem="JSX-JY-ohz" firstAttribute="trailing" secondItem="v0I-Ue-aXH" secondAttribute="trailing" id="kXb-gi-awZ"/>
                             <constraint firstItem="Nmg-lJ-maE" firstAttribute="top" secondItem="glY-sR-NFh" secondAttribute="top" constant="128" id="mlw-Ag-Y4b"/>
                             <constraint firstItem="glY-sR-NFh" firstAttribute="trailing" secondItem="v0I-Ue-aXH" secondAttribute="trailing" id="rL3-YP-9hD"/>
+                            <constraint firstItem="EBb-2A-loe" firstAttribute="leading" secondItem="v0I-Ue-aXH" secondAttribute="leading" id="tJF-pc-AIF"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="v0I-Ue-aXH"/>
                     </view>
